--- a/dotnetcore-sample/Views/Home/Index.cshtml
+++ b/dotnetcore-sample/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             <div class="col-2"  ></div>
 
             <div class="col-8" style="text-align: center;">
-              <h3>User Account Information and Email</h3>
+              <h3>User Account Information</h3>
             </div>
 
             <div class="col-2"  ></div>
